--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,8 @@
 image:
   registry: docker.io
   #repository: ranjan653/application
-  repository: rancher-server:5000/s3waasdept
+  #repository: rancher-server:5000/s3waasdept
+  repository: rancher-server:5000/s3waas-state-docker-rancher
   tag: 1.0.0
   pullPolicy: IfNotPresent
 
